--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,12 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
 
+  # database storage
+  sqflite: ^2.0.0+3
+
+  # format DateTime
+  intl: ^0.17.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
